fix!: change plugin name to parsek-i18n and remove manual versioning

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-version=1.0.0
-pluginId=i18n
+pluginId=parsek-i18n
 pluginClass=co.statu.rule.plugins.i18n.I18nPlugin
 pluginProvider=Rule
 pluginDependencies=
