fix: fix wrong plugin id

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-pluginId=parsek-i18n
+pluginId=parsek-plugin-i18n
 pluginClass=co.statu.rule.plugins.i18n.I18nPlugin
 pluginProvider=Rule
 pluginDependencies=
