--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 pluginId=parsek-plugin-i18n
 pluginClass=co.statu.rule.plugins.i18n.I18nPlugin
 pluginProvider=Rule
-pluginDependencies=
+pluginDependencies=parsek-plugin-auth?
 
 pf4jVersion=3.10.0
 vertxVersion=4.5.1
 gsonVersion=2.10.1
 handlebarsVersion=4.3.1
+springContextVersion=5.3.33
